# P3DX

./: README.md
p3dx_bringup/: .gitignore  CMakeLists.txt  README.md  package.xml
p3dx_bringup/launch/: bridge_p3dx_bringup_launch.py  bridge_p3dx_bringup_rviz_launch.py  bridge_p3dx_bringup_slam_launch.py  bridge_p3dx_bringup_slam_rviz_launch.py  bringup_rviz_launch.py  bringup_slam_launch.py  hokuyo_LRF.launch  p3dx_bringup.launch  p3dx_bringup_launch.py  sensors.launch
p3dx_bringup/params/: p3dx_nav2.yaml
p3dx_bringup/rviz/: p3dx.rviz
p3dx_description_ros/: CMakeLists.txt  LICENSE.md  package.xml
p3dx_description_ros/launch/: p3dx_description_ros2_launch.py
p3dx_description_ros/urdf/: pioneer3dx_fixed_joints.xml
