<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>p3dx_bringup</name>
  <version>1.0.0</version>
  <description>Pioneer P3DX bringup package</description>
  <maintainer email="lucyannofrota@gmail.com">Lucyanno Frota</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>p3dx_description_ros</depend>


</package>
